# prelude

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  STATUS.md  build_log.rs  mkdocs.yml  run_bench.md
crates/candle-core/: Cargo.toml
crates/candle-core/src/: error.rs  lib.rs  tensor.rs
crates/candle-core/src/cuda_backend/: device.rs  error.rs  gemm_dispatch.rs  mod.rs
crates/candle-paged-attn/: Cargo.toml  build.rs
crates/candle-paged-attn/kernels/: reshape_and_cache_kernel.cu
crates/candle-paged-attn/src/: lib.rs
crates/onednn-ffi/: CMakeLists.txt  Cargo.toml  README.md  build.rs
crates/onednn-ffi/csrc/: CMakeLists.txt  build.sh
crates/onednn-ffi/csrc/src/: onednn_ffi.cpp
crates/onednn-ffi/include/: onednn_ffi.h
crates/onednn-ffi/src/: lib.rs  onednn_ffi.cpp
crates/prelude-amd/: Cargo.toml
crates/prelude-amd/src/: amd_ops.rs  device.rs  kernels.rs  lib.rs  storage.rs
crates/prelude-core/: Cargo.toml  build.rs
crates/prelude-core/benches/: qwen3_bench.rs  tokenizer_bench.rs
crates/prelude-core/benches/cpu_ops_bench/: attention.rs  gemm.rs  main.rs  quant.rs  rmsnorm.rs  rope.rs
crates/prelude-core/benches/gpu_ops_bench/: gemm.rs  main.rs
crates/prelude-core/src/: config.rs  constants.rs  lib.rs  nn_ops.rs  profiling.rs  tensor.rs  types.rs
crates/prelude-core/src/cache/: deltanet_pool.rs  kv_buf.rs  manager.rs  mod.rs  paged.rs  planner.rs  prefix_cache.rs  prefix_index.rs  prefix_ops.rs
crates/prelude-core/src/engine/: config.rs  device.rs  engine.rs  engine_struct.rs  executor.rs  load.rs  loading.rs  mod.rs  planner.rs  pseudo.rs  scheduled.rs  tokenizer.rs  types.rs  weight_loader.rs  weights.rs
crates/prelude-core/src/loading/: mod.rs  var_builder.rs  weights.rs
crates/prelude-core/src/models/: README.md  config.rs  forward.rs  gemma3.rs  gemma4.rs  mod.rs  model_forward.rs  qwen3.rs  qwen3_5.rs  qwen3_moe.rs  qwen3_next.rs  registry.rs
crates/prelude-core/src/modules/: activation.rs  attention.rs  attn_utils.rs  linear.rs  mlp.rs  mod.rs  moe.rs  norm.rs  ops.rs  rotary.rs  transformer_block.rs
crates/prelude-core/src/ops/: cpu_ops.rs  hook_bridge.rs  mod.rs  naive_ops.rs
crates/prelude-core/src/runtime/: batch.rs  batch_common.rs  continuous.rs  cpu_batch.rs  cpu_batch_runtime.rs  cpu_continuous.rs  cuda_graph.rs  gpu_batch.rs  gpu_continuous.rs  gpu_queue.rs  mod.rs  request_state.rs
crates/prelude-core/src/scheduler/: adaptive.rs  admission.rs  diffusion.rs  dllm.rs  mod.rs  oneshot.rs  preemption.rs  scheduled_engine.rs  state.rs  tests.rs  tts.rs
crates/prelude-core/src/tensor/: error.rs  layout.rs  mod.rs  safetensors.rs  shape.rs  storage.rs  with_dtype.rs
crates/prelude-core/tests/: backend_registry.rs  gemma4.rs  hook_bridge.rs  modules.rs  quantized.rs  tensor_ops.rs
crates/prelude-core/tests/common/: mod.rs
crates/prelude-cpu/: Cargo.toml  README.md  build.rs
crates/prelude-cpu/onednn-ffi/: CMakeLists.txt
crates/prelude-cpu/onednn-ffi/include/: onednn_ffi.h
crates/prelude-cpu/onednn-ffi/src/: amx_gemm.c  onednn_ffi.cpp
crates/prelude-cpu/src/: attn_cpu.rs  cpu_ops.rs  executor.rs  lib.rs  linear_backends.rs  raw_cpu.rs
crates/prelude-cpu/src/bin_cpu_ops_bench/: attention.rs  gemm.rs  main.rs  quant.rs  rmsnorm.rs  rope.rs  silu_mul.rs
crates/prelude-cpu/src/onednn/: ffi.rs  mod.rs  ops.rs
crates/prelude-cpu/src/ops/: bf16_utils.rs  buf_tensor.rs  cpu_float.rs  gemm.rs  gemm_pool.rs  mod.rs  numa.rs  rmsnorm.rs  rope.rs  silu_mul.rs  softmax.rs
crates/prelude-cuda/: Cargo.toml  build.rs
crates/prelude-cuda/causal-conv1d/: Cargo.toml  build.rs
crates/prelude-cuda/causal-conv1d/csrc/: causal_conv1d_shim.cu
crates/prelude-cuda/causal-conv1d/src/: lib.rs
crates/prelude-cuda/causal-conv1d/tests/: correctness.rs
crates/prelude-cuda/cula/: Cargo.toml  README.md  build.rs  vendor
crates/prelude-cuda/cula/kernels/: manifest.json
crates/prelude-cuda/cula/scripts/: compile_kernels.py
crates/prelude-cuda/cula/src/: dsl.rs  (+2 more)
crates/prelude-cuda/cutlass-gemm/: Cargo.toml  README.md  build.rs
crates/prelude-cuda/deepgemm/: Cargo.toml  README.md  build.rs
crates/prelude-cuda/fa4/: .gitignore  Cargo.toml  README.md  build.rs
crates/prelude-cuda/flashinfer/: Cargo.toml  README.md  build.rs
crates/prelude-cuda/prelude-cutedsl/: Cargo.toml
crates/prelude-cuda/prelude-kernelbuild/: Cargo.toml
crates/prelude-cuda/quant-gemm/: Cargo.toml  README.md  build.rs
crates/prelude-cuda/src/: cuda_graph.rs  cuda_ops.rs  device.rs  executor.rs  fp8_gemm.rs  lib.rs  moe_ffi.rs  prefill_graph.rs  quant_backends.rs  scaled_fp8.rs  tensor_ops_kernels.rs
crates/prelude-cuda/tvm-ffi/: Cargo.toml  README.md  build.rs
crates/prelude-deepgemm/: Cargo.toml  README.md  build.rs
crates/prelude-deepgemm/examples/: bench_gemm.rs  bench_kernel.rs  correctness_test.rs
crates/prelude-deepgemm/src/: attention.cuh  common.cuh  deepgemm_sm100.cu  deepgemm_wrapper.cu  einsum.cuh  lib.rs  sm100_bf16.cuh  sm100_fp8.cuh  sm90_bf16.cuh  sm90_fp8.cuh
crates/prelude-deepgemm/tests/: correctness.rs
crates/prelude-flashinfer/: Cargo.toml  build.rs
crates/prelude-flashinfer/examples/: bench_attention.rs  bench_kernel.rs  test_ffi.rs
crates/prelude-flashinfer/kernels/: manifest.json
crates/prelude-flashinfer/scripts/: compile_kernels.py
crates/prelude-flashinfer/src/: lib.rs  loader.rs  sparse.rs
crates/prelude-flashinfer/tests/: correctness.rs
crates/prelude-microbench/: Cargo.toml  build.rs
crates/prelude-microbench/src/: hardware.rs  main.rs  report.rs
crates/prelude-quant-gemm/: Cargo.toml  build.rs
crates/prelude-quant-gemm/csrc/: dequantize_ffi.c  dequantize_gpu.cu  mmq_ffi.cu  mmq_ffi.h
crates/prelude-quant-gemm/examples/: bench_kernel.rs
crates/prelude-quant-gemm/src/: lib.rs
crates/prelude-quant-gemm/tests/: correctness.rs
crates/prelude-server/: Cargo.toml  build.rs
crates/prelude-server/src/: auth.rs  chat_template.rs  error.rs  lib.rs  logprobs.rs  main.rs  sse.rs  utils.rs
crates/prelude-server/tests/: api.rs  pseudo_binary.rs
(+561 files in other folders)
