[workspace]
members = ["crates/prelude-core", "crates/prelude-server", "crates/prelude-microbench", "crates/prelude-cutlass-gemm", "crates/prelude-deepgemm", "crates/prelude-flashinfer"]
exclude = ["crates/candle-core", "crates/candle-paged-attn", "crates/candle-flash-attn-v3", "crates/prelude-flash-attn-v4"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/Virtue-Research/prelude"
homepage = "https://github.com/Virtue-Research/prelude"
documentation = "https://github.com/Virtue-Research/prelude"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "json"] }
chrono = { version = "0.4.44", features = ["clock", "serde"] }
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors", "trace", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "registry"] }

# OpenTelemetry
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tracing-opentelemetry = { version = "0.32.1" }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

# ML / Tensor computation
candle-core = { version = "0.9.2" }
candle-transformers = { version = "0.9.2" }
candle-flash-attn = { version = "0.9.2" }
candle-flash-attn-v3 = { path = "crates/candle-flash-attn-v3" }
candle-paged-attn = { path = "crates/candle-paged-attn" }
prelude-flash-attn-v4 = { path = "crates/prelude-flash-attn-v4" }
prelude-deepgemm = { path = "crates/prelude-deepgemm" }
prelude-cutlass-gemm = { path = "crates/prelude-cutlass-gemm" }
prelude-flashinfer = { path = "crates/prelude-flashinfer" }

# Tokenization & model loading
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
fastokens = { git = "https://github.com/rucnyz/fastokens" }
hf-hub = "0.5.0"
rand = "0.10.0"

[profile.release]
lto = "thin"
strip = true

# Full optimization for distribution: cargo build --profile dist
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"

[patch.crates-io]
candle-core = { path = "crates/candle-core" }
