[workspace]
members = [
    "crates/prelude-core",
    "crates/prelude-cpu",
    "crates/prelude-server",
    "crates/prelude-cuda",
    "crates/prelude-cuda/cutlass-gemm",
    "crates/prelude-cuda/deepgemm",
    "crates/prelude-cuda/flashinfer",
    "crates/prelude-cuda/fa4",
    "crates/prelude-cuda/quant-gemm",
    "crates/prelude-cuda/cula",
    "crates/onednn-ffi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/Virtue-Research/prelude"
homepage = "https://github.com/Virtue-Research/prelude"
documentation = "https://github.com/Virtue-Research/prelude"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "json"] }
chrono = { version = "0.4.44", features = ["clock", "serde"] }
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors", "trace", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "registry"] }

# OpenTelemetry
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tracing-opentelemetry = { version = "0.32.1" }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

# ML / Tensor computation
candle-core = { git = "https://github.com/rucnyz/candle", branch = "prelude" }
candle-nn = { git = "https://github.com/rucnyz/candle", branch = "prelude" }
prelude-cuda = { path = "crates/prelude-cuda" }

# Kernel crates. Each entry uses the { version, path } dual spec so that:
#   * local workspace builds resolve through `path` (fast iteration)
#   * `cargo publish` strips the path and keeps only the version
#   * external consumers cloning a single crate fall back to crates.io
tvm-static-ffi = { version = "0.1.0", path = "crates/prelude-cuda/tvm-ffi" }
cula           = { version = "0.1.0", path = "crates/prelude-cuda/cula" }
flash-attn-v4  = { version = "0.1.0", path = "crates/prelude-cuda/fa4" }
deepgemm       = { version = "0.1.0", path = "crates/prelude-cuda/deepgemm" }
cutlass-gemm   = { version = "0.1.0", path = "crates/prelude-cuda/cutlass-gemm" }
flashinfer     = { version = "0.1.0", path = "crates/prelude-cuda/flashinfer" }
quant-gemm     = { version = "0.1.0", path = "crates/prelude-cuda/quant-gemm" }
onednn-ffi     = { version = "0.1.0", path = "crates/onednn-ffi" }

# Tokenization & model loading
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
fastokens = { git = "https://github.com/rucnyz/fastokens" }
hf-hub = "0.5.0"
rand = "0.10.0"
bc-mimalloc = { version = "0.1", features = ["v3"] }

[profile.release]
lto = "thin"
strip = true

# Full optimization for distribution: cargo build --profile dist
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"

