[package]
edition = "2021"
name = "candle-core"
version = "0.9.2"
description = "Trimmed tensor runtime for Prelude inference engine."
license = "MIT OR Apache-2.0"

[features]
cuda = [
    "cudarc",
    "dep:candle-kernels",
    "float8/cuda",
]
cudnn = [
    "cuda",
    "cudarc/cudnn",
]
nccl = [
    "cuda",
    "cudarc/nccl",
]
default = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("accelerate", "mkl", "metal", "ug"))'] }

[lib]
name = "candle_core"
path = "src/lib.rs"

[dependencies]
byteorder = "1.4.3"
candle-kernels = { version = "0.9.2", optional = true }
cudarc = { version = "0.19.4", features = ["std", "driver", "nvrtc", "f16", "f8", "cuda-version-from-build-system", "dynamic-linking"], optional = true, default-features = false }
float8 = { version = "0.6.0", features = ["num-traits", "rand_distr"] }
gemm = { version = "0.19.0", features = ["wasm-simd128-enable"] }
half = { version = "2.5.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }
libm = "0.2.15"
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
num-traits = "0.2.15"
num_cpus = "1.15.0"
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.7.0"
safetensors = "0.7.0"
thiserror = "2"
yoke = { version = "0.8.1", features = ["derive"] }
