[package]
name = "candle-paged-attn"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Paged attention CUDA kernels for candle"

[dependencies]
candle-core = { version = "0.9.2", features = ["cuda"] }
half = "2"

[build-dependencies]
bindgen_cuda = { git = "https://github.com/guoqingbao/bindgen_cuda.git", version = "0.1.6" }
