[package]
name = "prelude-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core inference engine, scheduler, and model runtime for Prelude"
autobins = false
readme = "../../README.md"
keywords = ["llm", "inference", "serving", "scheduler", "rust"]

[features]
default = []
cuda = ["candle-core/cuda", "candle-transformers?/cuda"]
candle-baseline = ["dep:candle-transformers"]
hf_tokenizer = ["dep:tokenizers"]
nvtx = []

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

candle-core.workspace = true
candle-transformers = { workspace = true, optional = true }
rand.workspace = true
fastokens.workspace = true
hf-hub.workspace = true
half = { version = "2.7.1", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["extern_crate_alloc", "derive"] }
inventory = "0.3"
rayon = "1.11.0"
tokenizers = { workspace = true, optional = true }
bc-mimalloc.workspace = true


[[bin]]
name = "tokenizer_bench"
path = "src/bin/tokenizer_bench.rs"
required-features = ["hf_tokenizer"]
