[package]
name = "prelude-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core inference engine, scheduler, and model runtime for Prelude"
autobins = false
readme = "../../README.md"
keywords = ["llm", "inference", "serving", "scheduler", "rust"]

[features]
default = []
hf_tokenizer = ["dep:tokenizers"]
nvtx = []
test-cuda = []
test-amd = []     # planned
test-metal = []   # planned
test-tpu = []     # planned

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
cubecl.workspace = true
cubek.workspace = true

rand.workspace = true
fastokens.workspace = true
hf-hub.workspace = true
half = { version = "2.7.1", features = ["bytemuck"] }
safetensors = "0.7.0"
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
yoke = { version = "0.8.1", features = ["derive"] }
bytemuck = { version = "1", features = ["extern_crate_alloc", "derive"] }
inventory = "0.3"
rayon = "1.11.0"
libm = "0.2"
tokenizers = { workspace = true, optional = true }
bc-mimalloc.workspace = true


[dev-dependencies]
prelude-cpu = { path = "../prelude-cpu" }
prelude-cuda = { path = "../prelude-cuda" }
serde_json = { workspace = true }
bytemuck = "1"

[[bin]]
name = "tokenizer_bench"
path = "src/bin/tokenizer_bench.rs"
required-features = ["hf_tokenizer"]

