[package]
name = "prelude-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core inference engine, scheduler, and model runtime for Prelude"
autobins = false
readme = "../../README.md"
keywords = ["llm", "inference", "serving", "scheduler", "rust"]

[features]
default = []
cuda = ["candle-core/cuda", "candle-transformers?/cuda", "cutlass-gemm"]
candle-baseline = ["dep:candle-transformers"]
flash-attn = ["cuda", "paged-attn", "candle-flash-attn"]
flash-attn-v3 = ["cuda", "candle-flash-attn-v3"]
flash-attn-v4 = ["cuda", "prelude-flash-attn-v4"]
deepgemm = ["cuda", "prelude-deepgemm"]
cutlass-gemm = ["cuda", "prelude-cutlass-gemm"]
flashinfer = ["cuda", "prelude-flashinfer"]
## FlashInfer + FA4 combined: FlashInfer skips tvm_ffi compilation (FA4 provides it).
flashinfer-v4 = ["flashinfer", "flash-attn-v4", "prelude-flashinfer/skip-tvm-ffi"]
paged-attn = ["dep:candle-paged-attn"]
full = ["flashinfer-v4", "deepgemm"]
hf_tokenizer = ["dep:tokenizers"]
nvtx = []

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

candle-core.workspace = true
candle-transformers = { workspace = true, optional = true }
rand.workspace = true
fastokens.workspace = true
hf-hub.workspace = true
half = { version = "2.7.1", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["extern_crate_alloc", "derive"] }
candle-flash-attn = { workspace = true, optional = true }
candle-flash-attn-v3 = { workspace = true, optional = true }
candle-paged-attn = { workspace = true, optional = true }
prelude-flash-attn-v4 = { workspace = true, optional = true }
prelude-deepgemm = { workspace = true, optional = true }
prelude-cutlass-gemm = { workspace = true, optional = true }
prelude-flashinfer = { workspace = true, optional = true }
inventory = "0.3"
rayon = "1.11.0"
nix = { version = "0.31", features = ["sched"] }
tokenizers = { workspace = true, optional = true }

[[bench]]
name = "cpu_ops_bench"
path = "benches/cpu_ops_bench/main.rs"
harness = false

[[bench]]
name = "gpu_ops_bench"
path = "benches/gpu_ops_bench/main.rs"
harness = false
required-features = ["cuda"]

[[bench]]
name = "tokenizer_bench"
path = "benches/tokenizer_bench.rs"
harness = false
required-features = ["hf_tokenizer"]

[[bench]]
name = "qwen3_bench"
path = "benches/qwen3_bench.rs"
harness = false
required-features = ["cuda"]
# Add "candle-baseline" to required-features for baseline comparison mode

[[bin]]
name = "fused_ops_test"
path = "src/bin/fused_ops_test.rs"
required-features = ["cuda"]

[[bin]]
name = "gemma3_test"
path = "src/bin/gemma3_test.rs"
required-features = ["cuda"]
