[package]
name = "prelude-cuda"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "CUDA device implementation for Prelude inference engine."
license = "Apache-2.0"

[lib]
name = "prelude_cuda"
path = "src/lib.rs"

[features]
default = ["cutlass-gemm"]
deepgemm = ["dep:prelude-deepgemm"]
cutlass-gemm = ["dep:prelude-cutlass-gemm"]
flash-attn-v4 = ["dep:prelude-flash-attn-v4"]
flashinfer = ["dep:prelude-flashinfer"]
quant-gemm = ["dep:prelude-quant-gemm"]
flash-attn = ["dep:candle-flash-attn"]
flash-attn-v3 = ["dep:candle-flash-attn-v3"]
paged-attn = ["dep:candle-paged-attn"]

[dependencies]
prelude-core = { path = "../prelude-core" }
candle-core = { workspace = true, features = ["cuda"] }
half = { version = "2.7.1", features = ["bytemuck"] }
tracing.workspace = true
bc-mimalloc.workspace = true

prelude-deepgemm = { path = "deepgemm", optional = true }
prelude-cutlass-gemm = { path = "cutlass-gemm", optional = true }
prelude-flash-attn-v4 = { path = "fa4", optional = true }
prelude-flashinfer = { path = "flashinfer", optional = true }
prelude-quant-gemm = { path = "quant-gemm", optional = true }
candle-flash-attn = { workspace = true, optional = true }
candle-flash-attn-v3 = { workspace = true, optional = true }
candle-paged-attn = { workspace = true, optional = true }

[[bin]]
name = "gpu_ops_bench"
path = "src/bin/gpu_ops_bench/main.rs"

[[bin]]
name = "fused_ops_test"
path = "src/bin/fused_ops_test.rs"
