[package]
name = "prelude-deepgemm"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "DeepGEMM BF16 GEMM for Prelude inference engine. Based on deepseek-ai/DeepGEMM."

[lib]
name = "prelude_deepgemm"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
half = "2"

[[example]]
name = "correctness_test"
