[package]
name = "prelude-microbench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Unified micro-benchmark suite for Prelude kernels"

[[bin]]
name = "prelude-microbench"
path = "src/main.rs"

[dependencies]
prelude-core = { path = "../prelude-core" }
candle-core.workspace = true
half = { version = "2.7.1", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["extern_crate_alloc", "derive"] }
rayon = "1.11.0"
nix = { version = "0.31", features = ["sched"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }

[build-dependencies]
cc = "1"
