[package]
name = "prelude-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "OpenAI-compatible HTTP server for Prelude model serving"
readme = "../../README.md"
keywords = ["llm", "inference", "serving", "openai", "rust"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true
hf-hub.workspace = true

prelude-core = { path = "../prelude-core", default-features = false }
prelude-cpu = { path = "../prelude-cpu" }
prelude-cuda = { path = "../prelude-cuda", optional = true }
bc-mimalloc.workspace = true
base64 = "0.22.1"
minijinja = "2.18.0"
minijinja-contrib = { version = "2.18.0", features = ["pycompat"] }

[dev-dependencies]
async-trait.workspace = true
http-body-util = "0.1.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
tower = { version = "0.5.3", features = ["util"] }

[features]
default = []
cuda = ["prelude-core/cuda", "dep:prelude-cuda"]
flash-attn = ["cuda", "prelude-core/flash-attn", "prelude-core/paged-attn", "prelude-cuda/flash-attn", "prelude-cuda/paged-attn"]
flash-attn-v3 = ["cuda", "prelude-core/flash-attn-v3", "prelude-cuda/flash-attn-v3"]
flash-attn-v4 = ["cuda", "prelude-core/flash-attn-v4", "prelude-cuda/flash-attn-v4"]
flashinfer = ["cuda", "prelude-core/flashinfer", "prelude-cuda/flashinfer"]
flashinfer-v4 = ["flashinfer", "flash-attn-v4"]
deepgemm = ["cuda", "prelude-cuda/deepgemm"]
quant-gemm = ["cuda", "prelude-cuda/quant-gemm"]
cula = ["cuda", "prelude-cuda/cula"]
paged-attn = ["cuda", "prelude-core/paged-attn"]
hf_tokenizer = ["prelude-core/hf_tokenizer"]
full = ["flashinfer-v4", "deepgemm", "quant-gemm", "cula"]
