[package]
name = "prelude-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "OpenAI-compatible HTTP server for Prelude model serving"
readme = "../../README.md"
keywords = ["llm", "inference", "serving", "openai", "rust"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true
hf-hub.workspace = true

prelude-core = { path = "../prelude-core", default-features = false }
prelude-cpu = { path = "../prelude-cpu" }
prelude-cuda = { path = "../prelude-cuda", optional = true }
bc-mimalloc.workspace = true
base64 = "0.22.1"
minijinja = "2.18.0"
minijinja-contrib = { version = "2.18.0", features = ["pycompat"] }

[dev-dependencies]
async-trait.workspace = true
http-body-util = "0.1.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
tower = { version = "0.5.3", features = ["util"] }

[features]
default = ["cpu"]
# CPU-only inference (oneDNN matmul, AVX-512 kernels)
cpu = []
# CUDA inference — all GPU backends (FlashInfer, FA4, CUTLASS, DeepGEMM, quant-gemm, cuLA)
cuda = [
    "dep:prelude-cuda",
    "prelude-cuda/flash-attn-v4",
    "prelude-cuda/flashinfer",
    "prelude-cuda/deepgemm",
    "prelude-cuda/quant-gemm",
    "prelude-cuda/cula",
]
# Everything
full = ["cpu", "cuda"]
