[package]
name = "prelude-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "OpenAI-compatible HTTP server for Prelude model serving"
readme = "../../README.md"
keywords = ["llm", "inference", "serving", "openai", "rust"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true
hf-hub.workspace = true

prelude-core = { path = "../prelude-core", default-features = false }
prelude-cpu = { path = "../prelude-cpu" }
prelude-cuda = { path = "../prelude-cuda", optional = true }
# Disabled: the prelude-amd crate is excluded from the workspace (t0-gpu's
# broken upstream submodule blocks cargo's manifest resolution). Even with
# `optional = true`, cargo still parses prelude-amd's Cargo.toml during the
# workspace-wide dep graph, which triggers the fetch failure. Uncomment once
# https://github.com/GeisYaO/t0-gpu fixes `.gitmodules tests/t0_original`.
# prelude-amd = { path = "../prelude-amd", optional = true }
bc-mimalloc.workspace = true
base64 = "0.22.1"
minijinja = "2.18.0"
minijinja-contrib = { version = "2.18.0", features = ["pycompat"] }

[dev-dependencies]
async-trait.workspace = true
http-body-util = "0.1.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
tower = { version = "0.5.3", features = ["util"] }

[features]
default = ["cpu"]
# CPU-only inference (oneDNN matmul, AVX-512 kernels)
cpu = []
# CUDA inference — all GPU backends (FlashInfer, FA4, CUTLASS, DeepGEMM, quant-gemm, cuLA)
cuda = [
    "dep:prelude-cuda",
    "prelude-core/cuda",
]
# AMD GPU inference — bare-metal KFD via t0-gpu (zero HIP/ROCm dependency).
# Disabled until t0-gpu upstream fixes `tests/t0_original` submodule entry.
# amd = ["dep:prelude-amd"]
# NVTX profiling annotations (no-op without this feature).
nvtx = ["prelude-core/nvtx"]
# Everything
full = ["cpu", "cuda"]
